--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Graphics\ILightSource.cs" />
     <Compile Include="Graphics\ModelReader.cs" />
     <Compile Include="Graphics\Renderer.cs" />
-    <Compile Include="Physics.cs" />
+    <Compile Include="Physics\Collision.cs" />
+    <Compile Include="Physics\Physics.Collisions.cs" />
+    <Compile Include="Physics\Physics.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="GameObject.cs" />
