--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -66,6 +66,8 @@
     <Reference Include="Microsoft.Xna.Framework.Storage, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -74,6 +76,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Editors\EditorAttribute.cs" />
+    <Compile Include="Editors\ComponentEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\MeshRendererEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\MeshRendererEditor.Designer.cs">
+      <DependentUpon>MeshRendererEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Editors\TransformEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\TransformEditor.Designer.cs">
+      <DependentUpon>TransformEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Graphics\AmbientLight.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Colliders\Collider.cs" />
@@ -108,6 +126,14 @@
       <Project>{1011caf4-54ec-405a-a387-f59cf91afcb3}</Project>
       <Name>LodeObj</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Editors\MeshRendererEditor.resx">
+      <DependentUpon>MeshRendererEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editors\TransformEditor.resx">
+      <DependentUpon>TransformEditor.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
