--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -76,11 +76,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Editors\AmbientLightEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Editors\AmbientLightEditor.Designer.cs">
+      <DependentUpon>AmbientLightEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Editors\CameraEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Editors\CameraEditor.Designer.cs">
       <DependentUpon>CameraEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Editors\ColorPicker.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Editors\EditorAttribute.cs" />
     <Compile Include="Editors\ComponentEditor.cs">
@@ -134,6 +143,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Editors\AmbientLightEditor.resx">
+      <DependentUpon>AmbientLightEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Editors\CameraEditor.resx">
       <DependentUpon>CameraEditor.cs</DependentUpon>
     </EmbeddedResource>
