--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -139,7 +139,9 @@
     <Compile Include="Colliders\SphereCollider.cs" />
     <Compile Include="Graphics\ILightSource.cs" />
     <Compile Include="Graphics\ModelReader.cs" />
+    <Compile Include="Graphics\PostProcessor.cs" />
     <Compile Include="Graphics\Renderer.cs" />
+    <Compile Include="Graphics\Screen.cs" />
     <Compile Include="Graphics\SkyboxRenderer.cs" />
     <Compile Include="Physics\Collision.cs" />
     <Compile Include="Physics\Physics.Collisions.cs" />
