--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -73,6 +73,12 @@
     <Compile Include="GameView.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SceneWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SceneWindow.Designer.cs">
+      <DependentUpon>SceneWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="World.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -85,6 +91,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
@@ -153,6 +160,10 @@
       <Project>{73a2c53f-f1ca-44ce-874f-daf8f666af89}</Project>
       <Name>ComponentModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Crom.Controls.Docking\Crom.Controls.Docking.csproj">
+      <Project>{a9df5e3c-aad6-4640-aaa1-65b3e7da290b}</Project>
+      <Name>Crom.Controls.Docking</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LodeObj\LodeObj.csproj">
       <Project>{1011caf4-54ec-405a-a387-f59cf91afcb3}</Project>
       <Name>LodeObj</Name>
@@ -161,6 +172,11 @@
       <Project>{e547f9e6-f3e2-4353-80ab-72ab591d9ed6}</Project>
       <Name>ScriptEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SceneWindow.resx">
+      <DependentUpon>SceneWindow.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
