--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -73,6 +73,12 @@
     <Compile Include="GameView.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="HierarchyWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HierarchyWindow.Designer.cs">
+      <DependentUpon>HierarchyWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="SceneWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
   <ItemGroup>
     <EmbeddedResource Include="EditorWindow.resx">
       <DependentUpon>EditorWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HierarchyWindow.resx">
+      <DependentUpon>HierarchyWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SceneWindow.resx">
       <DependentUpon>SceneWindow.cs</DependentUpon>
