--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -172,6 +172,10 @@
       <Project>{73a2c53f-f1ca-44ce-874f-daf8f666af89}</Project>
       <Name>ComponentModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ContentPiplineExtentions\ContentPiplineExtentions.csproj">
+      <Project>{7cd3a14d-90bf-4431-9a1d-7db5ca6c5bd2}</Project>
+      <Name>ContentPiplineExtentions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Crom.Controls.Docking\Crom.Controls.Docking.csproj">
       <Project>{a9df5e3c-aad6-4640-aaa1-65b3e7da290b}</Project>
       <Name>Crom.Controls.Docking</Name>
