--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -70,6 +70,7 @@
     <Compile Include="AnalizerWindow.Designer.cs">
       <DependentUpon>AnalizerWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="AssetManager.cs" />
     <Compile Include="Editor\EditorGUI.cs" />
     <Compile Include="Editor\EditorGUI.Fields.cs" />
     <Compile Include="Editor\EditorWindow.cs">
