--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -156,6 +156,9 @@
     <Content Include="betaLevel.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ContactTest.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
     <Content Include="OBBTest.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
