--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -121,7 +121,7 @@
     <Compile Include="DebugDeviceTextures.vb" />
     <Compile Include="EditorTester.vb" />
     <Compile Include="GameControlTest.vb" />
-    <Compile Include="LineRenderer.vb" />
+    <Compile Include="LocalAxisRenderer.vb" />
     <Compile Include="MatrixTester.vb" />
     <Compile Include="ObjectFactory.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
