Added BoxRenderer and AxisTesters for implementing angular collision response

--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -114,6 +114,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioTester.vb" />
+    <Compile Include="AxisAlignedTester.vb" />
+    <Compile Include="BoxRenderer.vb" />
     <Compile Include="CameraController.vb" />
     <Compile Include="CameraSwitcher.vb" />
     <Compile Include="ClosestPointShower.vb" />
