--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Graphics\SkyboxRenderer.cs" />
     <Compile Include="IgnoreInGUIAttribute.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="KeyCode.cs" />
     <Compile Include="Physics\Collision.cs" />
     <Compile Include="Physics\Physics.Collisions.cs" />
     <Compile Include="Physics\Physics.cs" />
@@ -186,6 +187,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\InputModule\InputModule.vcxproj">
+      <Project>{7fbf56be-8a15-4c71-8b02-78fa150b3751}</Project>
+      <Name>InputModule</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LodeObj\LodeObj.csproj">
       <Project>{1011caf4-54ec-405a-a387-f59cf91afcb3}</Project>
       <Name>LodeObj</Name>
