--- a/ComponentModel/ComponentModel.csproj
+++ b/ComponentModel/ComponentModel.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Graphics\Screen.cs" />
     <Compile Include="Graphics\SkyboxRenderer.cs" />
     <Compile Include="IgnoreInGUIAttribute.cs" />
+    <Compile Include="Input\GamePadButton.cs" />
     <Compile Include="Input\Input.Main.cs" />
     <Compile Include="Input\Input.Structs.cs" />
     <Compile Include="Input\KeyCode.cs" />
