--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -62,7 +62,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>FPX.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AnalizerWindow.cs">
@@ -80,6 +80,9 @@
     </Compile>
     <Compile Include="Editor\EditorGUI.cs" />
     <Compile Include="Editor\EditorGUI.Fields.cs" />
+    <Compile Include="Editor\EditorMainWindow.xaml.cs">
+      <DependentUpon>EditorMainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Editor\EditorWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +139,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
@@ -149,6 +153,7 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AudioTest.xml">
@@ -269,6 +274,12 @@
     <EmbeddedResource Include="SceneWindow.resx">
       <DependentUpon>SceneWindow.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Editor\EditorMainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
