- Made transform an IEnumerable<Transform> to allow iterating child nodes - Added an orthographic mode to camera for 2D rendering

--- a/FPX/FPX.csproj
+++ b/FPX/FPX.csproj
@@ -190,6 +190,9 @@
     <Content Include="Prefabs\Window.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="RayCastTest.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="RigidbodyTest.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
