- Created a new movement script for the spaceship - Ship accelerates linearly based on input - Torque is applied to the ship when turning - Ship smoothly decelerates to zero movement when no input is provided applies to rotation as well - Added 'AddRelitiveTorque' function to rigidbody - Created a CameraFollow script - Added a sound effect for lasers

--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -121,6 +121,7 @@
     <Compile Include="BoxRenderer.vb" />
     <Compile Include="BoxTester.vb" />
     <Compile Include="CameraController.vb" />
+    <Compile Include="CameraFollow.vb" />
     <Compile Include="CameraSwitcher.vb" />
     <Compile Include="ClosestPointShower.vb" />
     <Compile Include="ClosetPointFinder.vb" />
@@ -151,6 +152,7 @@
     <Compile Include="PsudodistanceTester.vb" />
     <Compile Include="RayTester.vb" />
     <Compile Include="RigidbodyController.vb" />
+    <Compile Include="SpaceshipControls.vb" />
     <Compile Include="SpaceshipEffects.vb" />
     <Compile Include="Spin.vb" />
     <Compile Include="StartringForce.vb" />
