- Energy recharges at a controlled rate - Shooting drains energy resource - Show bar for energy resource - When energy is completely drained, energy regen enters a cooldown state until completely charged. Player cannot shoot during this time - Show bar for health resource

--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -154,6 +154,7 @@
     <Compile Include="RigidbodyController.vb" />
     <Compile Include="SpaceshipControls.vb" />
     <Compile Include="SpaceshipEffects.vb" />
+    <Compile Include="SpaceShipResources.vb" />
     <Compile Include="Spin.vb" />
     <Compile Include="StartringForce.vb" />
     <Compile Include="TestScript.vb" />
