--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -126,7 +126,9 @@
     <Compile Include="ClosestPointShower.vb" />
     <Compile Include="ClosetPointFinder.vb" />
     <Compile Include="DebugDeviceTextures.vb" />
+    <Compile Include="DestroyBullets.vb" />
     <Compile Include="EditorTester.vb" />
+    <Compile Include="EnemyAI.vb" />
     <Compile Include="FireLaser.vb" />
     <Compile Include="GameControlTest.vb" />
     <Compile Include="LocalAxisRenderer.vb" />
