- AudioSources create sound effect instances when playing sounds 	- AudioSources can now loop sound effects and also control volume, pitch and pan - Add ambient space ship sounds - Sound when accelerating - Sound when decelerating - Added query functions to Transform

--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -154,6 +154,7 @@
     <Compile Include="PsudodistanceTester.vb" />
     <Compile Include="RayTester.vb" />
     <Compile Include="RigidbodyController.vb" />
+    <Compile Include="SpaceShipAudio.vb" />
     <Compile Include="SpaceshipControls.vb" />
     <Compile Include="SpaceshipEffects.vb" />
     <Compile Include="SpaceShipResources.vb" />
